# telegram-update-receiver

./: .gitignore  .mise.toml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: api.yaml  config.yaml  cronjob.yaml  ingress.yaml  poddisruptionbudget.yaml  secrets.yaml  service-account.yaml
src/receiver/: api.py  config.py
src/tests/api/: conftest.py
