[project]
requires-python = "==3.13.*"
name = "receiver"
version = "1.0.0"
description = ""
authors = [{ name = "Björn Petersen", email = "git@bjoernpetersen.net" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.1",
    "fastapi ==0.115.*",
    "httpx ==0.28.*",
    "nats-py ==2.10.0",
    "pydantic ==2.11.*",
    "sentry-sdk >=2.0.0, <3.0.0",
    "uvicorn[standard] ==0.34.*",
]

[dependency-groups]
dev = [
    "mypy ==1.16.*",
    "pytest >=8.0.0, <9.0.0",
    "pytest-mock >=3.0.0, <4.0.0",
    "ruff ==0.11.13",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FAST",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
